<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/values"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="#242424"
        android:layout_alignParentBottom="true">


     <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/km"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:textColor="#FFFFFF"
            android:text="00"
            android:textSize="18sp"
            android:paddingVertical="18dp"/>
        <TextView
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#6e6e6e"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:textColor="#FFFFFF"
            android:text="@string/kilometers"
            android:textSize="18sp"
            android:paddingVertical="18dp"/>
    </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#6e6e6e"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/m"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:textColor="#FFFFFF"
                android:text="00"
                android:textSize="18sp"
                android:paddingVertical="18dp"/>
            <TextView
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="#6e6e6e"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:textColor="#FFFFFF"
                android:text="@string/meters"
                android:textSize="18sp"
                android:paddingVertical="18dp"/>
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#6e6e6e"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/cm"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:textColor="#FFFFFF"
                android:text="00"
                android:textSize="18sp"
                android:paddingVertical="18dp"/>
            <TextView
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="#6e6e6e"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:textColor="#FFFFFF"
                android:text="@string/centimeter"
                android:textSize="18sp"
                android:paddingVertical="18dp"/>
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#6e6e6e"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/mm"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:textColor="#FFFFFF"
                android:text="00"
                android:textSize="18sp"
                android:paddingVertical="18dp"/>
            <TextView
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="#6e6e6e"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:textColor="#FFFFFF"
                android:text="@string/millimetre"
                android:textSize="18sp"
                android:paddingVertical="18dp"/>
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#6e6e6e"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/mac"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:textColor="#FFFFFF"
                android:text="00"
                android:textSize="18sp"
                android:paddingVertical="18dp"/>
            <TextView
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="#6e6e6e"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:textColor="#FFFFFF"
                android:text="@string/micrometers"
                android:textSize="18sp"
                android:paddingVertical="18dp"/>
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#6e6e6e"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/nan"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:textColor="#FFFFFF"
                android:text="00"
                android:textSize="18sp"
                android:paddingVertical="18dp"/>
            <TextView
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="#6e6e6e"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:textColor="#FFFFFF"
                android:text="@string/nanometer"
                android:textSize="18sp"
                android:paddingVertical="18dp"/>
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#6e6e6e"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/mile"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:textColor="#FFFFFF"
                android:text="00"
                android:textSize="18sp"
                android:paddingVertical="18dp"/>
            <TextView
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="#6e6e6e"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:textColor="#FFFFFF"
                android:text="@string/mile"
                android:textSize="18sp"
                android:paddingVertical="18dp"/>
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#6e6e6e"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/yard"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:textColor="#FFFFFF"
                android:text="00"
                android:textSize="18sp"
                android:paddingVertical="18dp"/>
            <TextView
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="#6e6e6e"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:textColor="#FFFFFF"
                android:text="@string/yard"
                android:textSize="18sp"
                android:paddingVertical="18dp"/>
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#6e6e6e"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/foot"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:textColor="#FFFFFF"
                android:text="00"
                android:textSize="18sp"
                android:paddingVertical="18dp"/>
            <TextView
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="#6e6e6e"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:textColor="#FFFFFF"
                android:text="@string/foot"
                android:textSize="18sp"
                android:paddingVertical="18dp"/>
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#6e6e6e"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/inch"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:textColor="#FFFFFF"
                android:text="00"
                android:textSize="18sp"
                android:paddingVertical="18dp"/>
            <TextView
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="#6e6e6e"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:textColor="#FFFFFF"
                android:text="@string/inches"
                android:textSize="18sp"
                android:paddingVertical="18dp"/>
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:background="@color/black"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_above="@+id/values"
        android:gravity="center"
        android:paddingVertical="50dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingHorizontal="20dp"
            android:gravity="center">
            <EditText
                android:id="@+id/input"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:background="@drawable/background"
                android:gravity="center"
                android:padding="20dp"
                android:textColor="@color/black"
                android:textSize="28sp"
                android:inputType="numberDecimal"
                android:layout_marginRight="10dp"/>
            <Spinner
                android:id="@+id/unit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="15dp"
                android:background="@drawable/background"/>
        </LinearLayout>
        </LinearLayout>
    
</RelativeLayout>